# BatteryModels

./: README.md  pyproject.toml
bo/: __init__.py  interface.py
bo/bayesianOptimization/: __init__.py  boClass.py  internalBO.py
bo/partxInterface/: runMultipleReps.py
bo/results/: fv_calculation.py  generateStatistics.py
bo/utils/: computeRobustness.py
demo/: BO_matlab.py  Dronemodel.py  HA.py  IntegrationPsiTaliro.m  IntegrationPsiTaliro2.m  IntegrationPsiTaliroEMA.m  IntegrationPsiTaliroEMA_HA.m  MODE_1.pkl  RoverModel.pkl  RoverModel.py  test_example_1.py  test_example_2.py  test_example_3.py  test_example_rover.py
demo/matlab_rover/: open_loop_reference.asv  open_loop_reference.m  parameters.m  simulator.asv  simulator.m
demo/slprj/_jitprj/: jitEngineAccessInfo.mat  s1j1bXOaR2FSEhBoeJCPopB.l  s1j1bXOaR2FSEhBoeJCPopB.mat
demos/: Batteries_v2.mat  Batteries_v2_lib.slx  model_file.py  run_Battery.m  staliroBoInterface.py  test_fan_aircooling_3.slx  test_fan_aircooling_4.slxc  test_model.m
demos/+Batteries_v2/+ParallelAssemblies/: ParallelAssemblyType1.ssc
tests/: run_Battery.m  test_bo.py  test_fan_aircooling_V2.slx  test_model.m
tests/bayesianOptimization/: test_boInterface.py  test_internalBO.py
tests/bayesianOptimization/goldResources/: test_1_bo.pickle  test_2_internalBO.pickle  test_3_internalBO.pickle
tests_2/: battery_discharge_1c_7000mah.csv  pytonBatteryModel.py  test_BO.py  test_fan_aircooling_3.slx  test_fan_aircooling_3.slxc  test_fan_aircooling_4.slx  test_run.py
tests_2/+Batteries_v2/: ModuleCell.ssc
(+19 files in other folders)
